assets/css/styles-8.css
/* ... */
@media (min-width: 768px) {
    .dropdown-menu{
        display: block !important;
        height:auto !important;
    }
}

@media (max-width: 767px) {

    body,p{
        font-size:16px;
        line-height:21px;
    }

    h1,
    .skills h2{
        font-size:24px;
        line-height:28px;
    }

    h2,
    #blog-list .post-title,
    #single-post .post-title{
        font-size:21px;
        line-height:24px;
    }

    .section-title{
        font-size:32px;
        line-height:36px;
    }

    .section-description{
        font-size:16px;
    }

    .big-title{
        font-size:32px;
    }
    .header-logo{
        width:180px;
        top:5%;
        margin-left:-90px;
    }
    .header-slider{
        margin-top:40px;
    }

    #home .bordered-text{
        border:3px solid #fff;
        margin:0 20px 0; 
        padding:10px 20px;
        font-size:32px;
        line-height:44px;
    }

    .counter{
        font-size:68px;
    }
    .cta .cta-message p,
    .cta .cta-message strong{
        font-size:18px;
        line-height:24px;
    }
    #main-nav .navbar-toggle{
        margin-top:14px;
    }
    #main-nav .nav a {
        line-height:42px !important;
        text-align:center;
        border-bottom:1px solid #f5f5f5;
    }

    #main-nav .nav a:before {
        display:none !important;
    }

    #main-nav.stuck .nav .active > a,
    #main-nav .nav a:hover{
        opacity:1;
        color:#F75443;
    }

    #main-nav li{
        clear: both;
        position: static !important;
    }
    
    .cta .cta-message {
        text-align:center;
    }

    .services .item{
        margin-bottom:60px;
    }

    #project-title{
        font-size:32px;
    }

    .team-member{
        margin-bottom:60px;
    }

    .team-member .member-thumb,
    .team-member .member-details{
        max-width: 300px;
        margin-left:auto;
        margin-right:auto;
    }

    #testimonials .pull-left{
        display: block;
        float:none;
        width:100%;
        margin-bottom:10px;
    }

    #testimonials .testimonial{
        font-size:18px;
        line-height:28px;
    }

    .project-item .project-thumb{
        max-width:400px;
        margin:0 auto;
    }

    .pricing .item{
        top:0;
        margin:0 auto 40px;
        max-width:400px;
    }

    #main-sidebar{
        display: none;
    }
    
    #site-nav{
        max-height:400px;
    }
    
    .dropdown .left-side.dropdown > a:after,
    .dropdown .dropdown > a:after{
        position: static;
        content:"\f0d7";
        font-size:14px;
        margin-left:5px;
        font-family:fontAwesome;
    }

    .dropdown-menu .dropdown-menu,
    .dropdown-menu{
        position: static;
        top:0 !important;
        left:0 !important;
        right:auto !important;
        padding:0;
        display: none;
        width: 100% !important;
        visibility: visible;
        box-shadow: none !important;
        border:none !important;
        -webkit-transform: translateY(0);
        transform: translateY(0);
        opacity:1;
    }

    #main-nav .dropdown-menu li{
        position: static;
        display: block;
        width: 100%;
        padding:0;
        margin:0;
    }

    #main-nav .dropdown-menu a{
        clear: none;
        padding:5px 0;
        font-size:14px;
        line-height: 46px !important;
    }

    #main-nav .dropdown-menu a:hover{
        padding:5px 0;
        font-size:14px;
        line-height: 14px;
        color: #F75443;
        background: none;
    }

    #inner-page-header .bordered-text{
        margin-left:30px;
        margin-right:30px;
        padding:15px;
        font-size:21px;
        line-height: 32px;
    }
    
    .padding-top-bottom #single-post{
        margin-top:-50px;
    }
    
    
    .features .media .pull-right{
        float: left !important;
        margin-left:0;
        margin-right:10px;
    }

    .features .media .pull-right+.text-right{
        text-align: left;
    }
    
    #testimonials .pull-left{
      float:none!important;
    }
       
    .post-comments .media .media,
    .post-comments .media .replies{
        margin-left: -50px;
    }
    
    .post-comments .btn{
        width: 100%;
    }
}

@media (max-width: 479px) {
    #projects-container .project-item{
        width: 100%;
    }
    
}	

